err/django-under-maintenance.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_maintenance'...
Listing './lib/python3.5/site-packages/django_maintenance/management'...
Listing './lib/python3.5/site-packages/django_maintenance/management/commands'...
Compiling './lib/python3.5/site-packages/django_maintenance/management/commands/maintenance.py'...
***   File "./lib/python3.5/site-packages/django_maintenance/management/commands/maintenance.py", line 25
    print 'Invalid number of arguments: {0}'.format(len(sys.argv) - 2)
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_maintenance/templates'...
Listing './lib/python3.5/site-packages/django_maintenance/templates/django_maintenance'...
Listing './lib/python3.5/site-packages/django_under_maintenance-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
